--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 const jwt_secret_key = "rove-avi-ars-secret";
+const MONGODB_URI="mongodb+srv://avi116:Tech1216@cluster0.xsxuhan.mongodb.net/RoveIndia?retryWrites=true&w=majority&appName=Cluster0"
