--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 const jwt_secret_key = "rove-avi-ars-secret";
-const MONGODB_URI="mongodb+srv://avi116:Techavi1216@cluster0.dxy3r.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+const MONGODB_URI="mongodb+srv://avi116:Techavi1216@cluster0.dxy3r.mongodb.net/RoveIndia?retryWrites=true&w=majority&appName=Cluster0"
