--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 const jwt_secret_key = "rove-avi-ars-secret";
-const MONGODB_URI="mongodb+srv://avi116:Techavi1216@cluster0.dxy3r.mongodb.net/RoveIndia?retryWrites=true&w=majority"
+const MONGODB_URI='mongodb+srv://avi116:Techavi1216@cluster0.dxy3r.mongodb.net/RoveIndia?retryWrites=true&w=majority'
+ 
